feat: 支持通过 wps (joy / mesh) 键启动 HTTP Server

--- a/u-boot-2016/arch/arm/dts/ipq6018-cp03-c2.dts
+++ b/u-boot-2016/arch/arm/dts/ipq6018-cp03-c2.dts
@@ -27,8 +27,9 @@
 		blink_led = "/tlmm-gpio/led_gpio/led_blue";
 		system_led = "/tlmm-gpio/led_gpio/led_green";
 		reset_key = "/tlmm-gpio/key_gpio/reset";
+		wps_key = "/tlmm-gpio/key_gpio/joylink";
 	};
-	
+
 	ess-switch {
 		switch_mac_mode = <PORT_WRAPPER_PSGMII>;
 		switch_mac_mode1 = <UNUSED>;
@@ -58,7 +59,7 @@
 			};
 		};
 	};
-	
+
 	tlmm-gpio {
 		led_gpio {
 			led_red {
@@ -86,7 +87,7 @@
 				oe = <GPIO_OE_ENABLE>;
 			};
 		};
-		
+
 		key_gpio {
 			reset {
 				gpio = <9>;
@@ -105,4 +106,3 @@
 		};
 	};
 };
-
