--- a/u-boot-2016/net/Makefile
+++ b/u-boot-2016/net/Makefile
@@ -20,4 +20,5 @@ obj-$(CONFIG_CMD_PING) += ping.o
 obj-$(CONFIG_CMD_RARP) += rarp.o
 obj-$(CONFIG_CMD_SNTP) += sntp.o
 obj-$(CONFIG_CMD_NET)  += tftp.o
-obj-$(CONFIG_HTTPD)  += httpd.o
+obj-$(CONFIG_HTTPD)    += httpd.o
+obj-$(CONFIG_MTK_DHCPD)+= mtk_dhcpd.o
